--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onward Dominicans - News</title>
-    <link rel="stylesheet" href="/src/index.css">
-
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      // Configure Tailwind CSS
+      tailwind.config = {
+        darkMode: 'class', // Important: Enable class-based dark mode
+        theme: {
+          extend: {
+            // You can add custom theme extensions here if needed
+          }
+        }
+      }
+    </script>
     <style>
       body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Example professional font */
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        background-color: #f8fafc;
-        color: #1e293b;
-      }
-
-      html.dark body {
-        background-color: #0f172a;
-        color: #e2e8f0;
+        /* Correctly apply base and dark mode styles for body using Tailwind prefixes */
+        @apply bg-slate-50 text-slate-800 dark:bg-slate-900 dark:text-slate-200;
       }
 
       /* Custom scrollbar for a more polished look */
@@ -86,37 +91,15 @@
       .animation-delay-900 { animation-delay: 0.9s; }
       .animation-delay-1000 { animation-delay: 1s; }
 
-      /* Custom link styles */
-      .prose-lg .link {
-        color: #d97706;
-        transition: color 0.2s ease;
-      }
-      .prose-lg .link:hover {
-        color: #b45309;
-      }
-      html.dark .prose-lg .link {
-        color: #fbbf24;
-      }
-      html.dark .prose-lg .link:hover {
-        color: #f59e0b;
+      /* Ensure prose dark mode works well with Tailwind */
+      /* This rule is fine, but components should prefer dark:prose-invert */
+      html.dark .prose-dark {
+        @apply prose-invert;
       }
 
-      .prose-lg strong {
-        color: inherit;
-      }
-      html.dark .prose-lg strong {
-        color: #f1f5f9;
-      }
-
-      .prose-lg h1, .prose-lg h2, .prose-lg h3, .prose-lg h4 {
-        color: inherit;
-      }
-      html.dark .prose-lg h1,
-      html.dark .prose-lg h2,
-      html.dark .prose-lg h3,
-      html.dark .prose-lg h4 {
-        color: #f1f5f9;
-      }
+      .prose-lg .link { @apply text-yellow-600 hover:text-yellow-700 dark:text-yellow-400 dark:hover:text-yellow-500; }
+      .prose-lg strong { @apply dark:text-slate-100; }
+      .prose-lg h1, .prose-lg h2, .prose-lg h3, .prose-lg h4 { @apply dark:text-slate-100; }
 
 
     </style>
