--- a/secret.html
+++ b/secret.html
@@ -313,8 +313,8 @@
 
                     <!-- Email -->
                     <div>
-                        <label for="author-email" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Email Address *</label>
-                        <input type="email" id="author-email" name="email" required
+                        <label for="author-email" class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Email Address</label>
+                        <input type="email" id="author-email" name="email"
                             class="w-full px-4 py-3 border border-slate-300 dark:border-slate-600 rounded-lg focus:ring-2 focus:ring-yellow-500 focus:border-transparent bg-white dark:bg-slate-700 text-slate-900 dark:text-slate-100"
                             placeholder="author@onwarddominicans.news">
                     </div>
@@ -2780,8 +2780,8 @@
                 const name = formData.get('name');
                 const email = formData.get('email');
 
-                if (!name || !email) {
-                    this.showToast('Please fill in all required fields', 'error');
+                if (!name || name.trim() === '') {
+                    this.showToast('Please enter the author name', 'error');
                     return;
                 }
 
@@ -2792,7 +2792,7 @@
 
                     const authorData = {
                         name: name.trim(),
-                        email: email.trim(),
+                        email: email && email.trim() ? email.trim() : null,
                         bio: formData.get('bio') || null,
                         avatarUrl: formData.get('avatarUrl') || null,
                         isActive: formData.get('isActive') === 'true'
