Fix author data not showing when editing
- Add setTimeout delay to ensure modal DOM is ready before populating form
- Add comprehensive error checking in populateAuthorForm function
- Add detailed console logging for debugging author edit flow
- Check for form element existence before populating values
- Improve avatar preview handling for edit mode
- Fix isActive field population logic
- Match timing pattern used in category editor (150ms delay)

--- a/secret.html
+++ b/secret.html
@@ -2711,14 +2711,18 @@
                 try {
                     // Load the author data
                     const response = await this.makeAPICall(`/authors/${authorId}`);
+                    console.log('📊 Author API response:', response);
+
                     if (response.success && response.data) {
+                        console.log('📋 Author data received:', response.data);
                         this.currentEditingAuthor = response.data;
                         this.openAuthorEditor(response.data);
                     } else {
+                        console.error('❌ Failed to load author data:', response.error);
                         this.showToast('Failed to load author data', 'error');
                     }
                 } catch (error) {
-                    console.error('Error loading author:', error);
+                    console.error('❌ Error loading author:', error);
                     this.showToast('Error loading author data', 'error');
                 }
             }
@@ -2731,22 +2735,24 @@
                 // Set modal title
                 title.textContent = author ? 'Edit Author' : 'Create New Author';
 
-                // Populate form if editing
-                if (author) {
-                    this.populateAuthorForm(author);
-                } else {
-                    form.reset();
-                    document.getElementById('avatar-preview').classList.add('hidden');
-                }
-
-                // Show modal
+                // Show modal first
                 modal.classList.remove('hidden');
                 document.body.style.overflow = 'hidden';
 
-                // Focus on name field
+                // Wait a moment for DOM to be ready, then populate form
                 setTimeout(() => {
+                    if (author) {
+                        console.log('📝 Populating author form with data:', author);
+                        this.populateAuthorForm(author);
+                    } else {
+                        console.log('🆕 Setting up form for new author');
+                        form.reset();
+                        document.getElementById('avatar-preview').classList.add('hidden');
+                    }
+
+                    // Focus on name field
                     document.getElementById('author-name').focus();
-                }, 100);
+                }, 150);
             }
 
             closeAuthorEditor() {
@@ -2757,16 +2763,36 @@
             }
 
             populateAuthorForm(author) {
-                document.getElementById('author-name').value = author.name || '';
-                document.getElementById('author-email').value = author.email || '';
-                document.getElementById('author-avatar').value = author.avatarUrl || '';
-                document.getElementById('author-bio').value = author.bio || '';
-                document.getElementById('author-status').value = author.isActive ? 'true' : 'false';
+                console.log('🔧 Populating author form with:', author);
+
+                // Get form elements
+                const nameField = document.getElementById('author-name');
+                const emailField = document.getElementById('author-email');
+                const avatarField = document.getElementById('author-avatar');
+                const bioField = document.getElementById('author-bio');
+                const statusField = document.getElementById('author-status');
+
+                // Check if elements exist
+                if (!nameField || !emailField || !avatarField || !bioField || !statusField) {
+                    console.error('❌ Author form elements not found in DOM');
+                    return;
+                }
+
+                // Populate fields
+                nameField.value = author.name || '';
+                emailField.value = author.email || '';
+                avatarField.value = author.avatarUrl || '';
+                bioField.value = author.bio || '';
+                statusField.value = author.isActive !== false ? 'true' : 'false';
 
                 // Show avatar preview if URL exists
                 if (author.avatarUrl) {
                     this.updateAvatarPreview(author.avatarUrl);
+                } else {
+                    document.getElementById('avatar-preview').classList.add('hidden');
                 }
+
+                console.log('✅ Author form populated successfully');
             }
 
             async saveAuthor() {
