Fix authors list not displaying in admin panel
- Add comprehensive debugging and logging to loadAuthors function
- Add API response status indicator showing number of authors loaded
- Add proper empty state when no authors exist with call-to-action
- Add error state with retry button when API fails
- Improve email display to show 'No email' instead of empty string
- Add detailed console logging for troubleshooting
- Match successful pattern used in categories section

--- a/secret.html
+++ b/secret.html
@@ -2640,8 +2640,12 @@
 
             async loadAuthors() {
                 try {
+                    console.log('👥 Loading authors from API...');
                     const response = await this.makeAPICall('/authors?limit=50');
+                    console.log('📊 Authors API response:', response);
+
                     this.authors = response.data || [];
+                    console.log(`✅ Loaded ${this.authors.length} authors from backend`);
 
                     const mainContent = document.getElementById('main-content');
                     mainContent.innerHTML = `
@@ -2649,6 +2653,9 @@
                             <div>
                                 <h2 class="text-3xl font-bold text-slate-800 dark:text-slate-200">Authors</h2>
                                 <p class="text-slate-600 dark:text-slate-400 mt-2">Manage article authors and contributors.</p>
+                                <div class="mt-2 text-sm text-green-600 dark:text-green-400">
+                                    ✅ Data loaded from backend API (${this.authors.length} authors)
+                                </div>
                             </div>
                             <button onclick="adminDashboard.createAuthor()" class="bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg btn-primary flex items-center space-x-2">
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -2658,45 +2665,65 @@
                             </button>
                         </div>
 
-                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                            ${this.authors.map(author => `
-                                <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-6 admin-card border-l-4 ${author.isActive ? 'border-green-500' : 'border-gray-400'}">
-                                    <div class="flex items-start space-x-4">
-                                        <div class="relative">
-                                            <img src="${author.avatarUrl || 'https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=60&q=60'}" alt="${author.name}" class="w-16 h-16 rounded-full object-cover border-2 border-slate-200 dark:border-slate-600">
-                                            <div class="absolute -bottom-1 -right-1 w-5 h-5 rounded-full ${author.isActive ? 'bg-green-500' : 'bg-gray-400'} border-2 border-white dark:border-slate-800"></div>
-                                        </div>
-                                        <div class="flex-1 min-w-0">
-                                            <h3 class="text-lg font-semibold text-slate-800 dark:text-slate-200 truncate">${author.name}</h3>
-                                            <p class="text-sm text-slate-500 dark:text-slate-400 truncate">${author.email}</p>
-                                            <p class="text-sm text-slate-600 dark:text-slate-400 mt-1 line-clamp-2">${author.bio || 'No bio available'}</p>
-                                            <div class="flex items-center justify-between mt-2">
-                                                <span class="text-xs text-slate-500 dark:text-slate-500">${author._count?.articles || 0} articles</span>
-                                                <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full ${author.isActive ? 'bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200' : 'bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200'}">${author.isActive ? 'Active' : 'Inactive'}</span>
+                        ${this.authors.length > 0 ? `
+                            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                                ${this.authors.map(author => `
+                                    <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-6 admin-card border-l-4 ${author.isActive ? 'border-green-500' : 'border-gray-400'}">
+                                        <div class="flex items-start space-x-4">
+                                            <div class="relative">
+                                                <img src="${author.avatarUrl || 'https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=60&q=60'}" alt="${author.name}" class="w-16 h-16 rounded-full object-cover border-2 border-slate-200 dark:border-slate-600">
+                                                <div class="absolute -bottom-1 -right-1 w-5 h-5 rounded-full ${author.isActive ? 'bg-green-500' : 'bg-gray-400'} border-2 border-white dark:border-slate-800"></div>
+                                            </div>
+                                            <div class="flex-1 min-w-0">
+                                                <h3 class="text-lg font-semibold text-slate-800 dark:text-slate-200 truncate">${author.name}</h3>
+                                                <p class="text-sm text-slate-500 dark:text-slate-400 truncate">${author.email || 'No email'}</p>
+                                                <p class="text-sm text-slate-600 dark:text-slate-400 mt-1 line-clamp-2">${author.bio || 'No bio available'}</p>
+                                                <div class="flex items-center justify-between mt-2">
+                                                    <span class="text-xs text-slate-500 dark:text-slate-500">${author._count?.articles || 0} articles</span>
+                                                    <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full ${author.isActive ? 'bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200' : 'bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200'}">${author.isActive ? 'Active' : 'Inactive'}</span>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="mt-4 flex space-x-2">
+                                            <button onclick="adminDashboard.editAuthor('${author.id}')" class="flex-1 bg-yellow-500 hover:bg-yellow-600 text-white px-3 py-2 rounded-lg text-sm btn-primary flex items-center justify-center space-x-1">
+                                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
+                                                </svg>
+                                                <span>Edit</span>
+                                            </button>
+                                            <button onclick="adminDashboard.deleteAuthor('${author.id}')" class="flex-1 bg-red-500 hover:bg-red-600 text-white px-3 py-2 rounded-lg text-sm btn-primary flex items-center justify-center space-x-1">
+                                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+                                                </svg>
+                                                <span>Delete</span>
+                                            </button>
+                                        </div>
                                     </div>
-                                    <div class="mt-4 flex space-x-2">
-                                        <button onclick="adminDashboard.editAuthor('${author.id}')" class="flex-1 bg-yellow-500 hover:bg-yellow-600 text-white px-3 py-2 rounded-lg text-sm btn-primary flex items-center justify-center space-x-1">
-                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
-                                            </svg>
-                                            <span>Edit</span>
-                                        </button>
-                                        <button onclick="adminDashboard.deleteAuthor('${author.id}')" class="flex-1 bg-red-500 hover:bg-red-600 text-white px-3 py-2 rounded-lg text-sm btn-primary flex items-center justify-center space-x-1">
-                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
-                                            </svg>
-                                            <span>Delete</span>
-                                        </button>
-                                    </div>
-                                </div>
-                            `).join('')}
-                        </div>
+                                `).join('')}
+                            </div>
+                        ` : `
+                            <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-12 text-center">
+                                <div class="text-slate-400 dark:text-slate-500 text-6xl mb-4">👥</div>
+                                <h3 class="text-lg font-medium text-slate-900 dark:text-slate-100 mb-2">No authors yet</h3>
+                                <p class="text-slate-500 dark:text-slate-400 mb-6">Create your first author to start managing content contributors</p>
+                                <button onclick="adminDashboard.createAuthor()" class="bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg btn-primary">Create First Author</button>
+                            </div>
+                        `}
                     `;
                 } catch (error) {
-                    console.error('Error loading authors:', error);
+                    console.error('❌ Error loading authors:', error);
                     this.showToast('Error loading authors', 'error');
+
+                    // Show error state
+                    const mainContent = document.getElementById('main-content');
+                    mainContent.innerHTML = `
+                        <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-12 text-center">
+                            <div class="text-red-400 text-6xl mb-4">⚠️</div>
+                            <h3 class="text-lg font-medium text-slate-900 dark:text-slate-100 mb-2">Failed to load authors</h3>
+                            <p class="text-slate-500 dark:text-slate-400 mb-6">There was an error connecting to the server. Please check your connection and try again.</p>
+                            <button onclick="adminDashboard.loadAuthors()" class="bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg btn-primary">Retry</button>
+                        </div>
+                    `;
                 }
             }
 
