Enable admin panel to show all authors including inactive ones
Backend changes:
- Add includeInactive query parameter to authors API endpoint
- Update authorController to support showing inactive authors when requested
- Modify rawSqlFallbacks.countAuthors and getAuthors to accept includeInactive parameter
- Update SQL queries to conditionally filter by isActive status
- Add validation for includeInactive parameter in routes

Frontend changes:
- Update admin panel to request all authors (active and inactive) using includeInactive=true
- This allows admins to see and manage all authors regardless of status
- Maintains visual distinction between active/inactive authors with border colors and status badges

This fixes the issue where inactive authors were not visible in the admin panel for editing.

--- a/secret.html
+++ b/secret.html
@@ -2641,7 +2641,7 @@
             async loadAuthors() {
                 try {
                     console.log('👥 Loading authors from API...');
-                    const response = await this.makeAPICall('/authors?limit=50');
+                    const response = await this.makeAPICall('/authors?limit=50&includeInactive=true');
                     console.log('📊 Authors API response:', response);
 
                     this.authors = response.data || [];
