Add comprehensive debugging for author form population
Backend improvements:
- Wrap getAuthor endpoint with safePrismaOperation to handle prepared statement conflicts
- Add fallback client operation for better reliability

Frontend debugging enhancements:
- Add detailed logging for author data breakdown
- Log form element existence verification
- Add step-by-step field population logging
- Add post-population verification to confirm values were set
- Enhanced error reporting for missing form elements

This will help identify exactly where the form population is failing when editing authors.

--- a/secret.html
+++ b/secret.html
@@ -2791,6 +2791,13 @@
 
             populateAuthorForm(author) {
                 console.log('🔧 Populating author form with:', author);
+                console.log('📋 Author data breakdown:', {
+                    name: author.name,
+                    email: author.email,
+                    avatarUrl: author.avatarUrl,
+                    bio: author.bio,
+                    isActive: author.isActive
+                });
 
                 // Get form elements
                 const nameField = document.getElementById('author-name');
@@ -2799,27 +2806,65 @@
                 const bioField = document.getElementById('author-bio');
                 const statusField = document.getElementById('author-status');
 
+                console.log('🔍 Form elements found:', {
+                    nameField: !!nameField,
+                    emailField: !!emailField,
+                    avatarField: !!avatarField,
+                    bioField: !!bioField,
+                    statusField: !!statusField
+                });
+
                 // Check if elements exist
                 if (!nameField || !emailField || !avatarField || !bioField || !statusField) {
                     console.error('❌ Author form elements not found in DOM');
+                    console.error('Missing elements:', {
+                        nameField: !nameField,
+                        emailField: !emailField,
+                        avatarField: !avatarField,
+                        bioField: !bioField,
+                        statusField: !statusField
+                    });
                     return;
                 }
 
-                // Populate fields
+                // Populate fields with detailed logging
+                console.log('📝 Setting field values...');
                 nameField.value = author.name || '';
+                console.log('✓ Name field set to:', nameField.value);
+
                 emailField.value = author.email || '';
+                console.log('✓ Email field set to:', emailField.value);
+
                 avatarField.value = author.avatarUrl || '';
+                console.log('✓ Avatar field set to:', avatarField.value);
+
                 bioField.value = author.bio || '';
+                console.log('✓ Bio field set to:', bioField.value);
+
                 statusField.value = author.isActive !== false ? 'true' : 'false';
+                console.log('✓ Status field set to:', statusField.value);
 
                 // Show avatar preview if URL exists
                 if (author.avatarUrl) {
+                    console.log('🖼️ Updating avatar preview with URL:', author.avatarUrl);
                     this.updateAvatarPreview(author.avatarUrl);
                 } else {
+                    console.log('🚫 No avatar URL, hiding preview');
                     document.getElementById('avatar-preview').classList.add('hidden');
                 }
 
                 console.log('✅ Author form populated successfully');
+
+                // Verify the values were actually set
+                setTimeout(() => {
+                    console.log('🔍 Verification - Current field values:', {
+                        name: nameField.value,
+                        email: emailField.value,
+                        avatar: avatarField.value,
+                        bio: bioField.value,
+                        status: statusField.value
+                    });
+                }, 100);
             }
 
             async saveAuthor() {
