Fix author editing by prioritizing backend over Supabase
- Modified makeAPICall to try backend first, then fallback to Supabase
- Added getAuthorFromSupabase function to handle individual author fetching
- Updated handleAuthorOperation to support individual author requests
- Removed duplicate options variable declaration
- Enhanced debugging with backend vs Supabase routing logs

This ensures the admin panel uses the working backend API with seeded author data instead of empty Supabase tables, fixing the issue where author edit forms were empty.

--- a/secret.html
+++ b/secret.html
@@ -941,21 +941,7 @@
             async makeAPICall(endpoint, method = 'GET', data = null) {
                 console.log(`🌐 API Call: ${method} ${this.apiBase}${endpoint}`);
 
-                // Use Supabase directly for all operations since backend is down
-                if (endpoint.startsWith('/articles')) {
-                    return this.handleArticleOperation(endpoint, method, data);
-                }
-                if (endpoint.startsWith('/authors')) {
-                    return this.handleAuthorOperation(endpoint, method, data);
-                }
-                if (endpoint.startsWith('/categories')) {
-                    return this.handleCategoryOperation(endpoint, method, data);
-                }
-                if (endpoint.startsWith('/gallery')) {
-                    return this.handleGalleryOperation(endpoint, method, data);
-                }
-
-                // For non-article operations, try backend first, then fallback
+                // Try backend first, then fallback to Supabase if it fails
                 const options = {
                     method: method,
                     headers: {
@@ -972,22 +958,39 @@
                 }
 
                 try {
+                    console.log('🔄 Trying backend first...');
                     const response = await fetch(`${this.apiBase}${endpoint}`, options);
                     const result = await response.json();
 
-                    console.log(`📥 API Response (${response.status}):`, result);
+                    console.log(`📥 Backend Response (${response.status}):`, result);
 
                     if (!response.ok) {
-                        const errorMessage = result.error?.message || result.message || 'API call failed';
-                        console.error('❌ API Error Details:', result.error);
-                        throw new Error(errorMessage);
+                        throw new Error(`Backend error: ${response.status}`);
                     }
 
                     return result;
                 } catch (error) {
-                    console.error('❌ API Call failed:', error);
+                    console.warn('⚠️ Backend failed, trying Supabase fallback:', error.message);
+
+                    // Fallback to Supabase for specific operations
+                    if (endpoint.startsWith('/articles')) {
+                        return this.handleArticleOperation(endpoint, method, data);
+                    }
+                    if (endpoint.startsWith('/authors')) {
+                        return this.handleAuthorOperation(endpoint, method, data);
+                    }
+                    if (endpoint.startsWith('/categories')) {
+                        return this.handleCategoryOperation(endpoint, method, data);
+                    }
+                    if (endpoint.startsWith('/gallery')) {
+                        return this.handleGalleryOperation(endpoint, method, data);
+                    }
+
+                    // If no Supabase fallback available, throw the original error
                     throw error;
                 }
+
+
             }
 
             async handleArticleOperation(endpoint, method, data) {
@@ -1269,6 +1272,45 @@
                 }
             }
 
+            async getAuthorFromSupabase(authorId) {
+                try {
+                    console.log(`🔄 Fetching author ${authorId} from Supabase...`);
+
+                    const response = await fetch(`${this.supabaseUrl}/rest/v1/authors?id=eq.${authorId}`, {
+                        headers: {
+                            'apikey': this.supabaseAnonKey,
+                            'Authorization': `Bearer ${this.supabaseAnonKey}`,
+                            'Content-Type': 'application/json'
+                        }
+                    });
+
+                    if (!response.ok) {
+                        throw new Error(`Supabase request failed: ${response.status}`);
+                    }
+
+                    const authors = await response.json();
+                    console.log(`📋 Author data from Supabase:`, authors);
+
+                    if (authors.length === 0) {
+                        throw new Error('Author not found');
+                    }
+
+                    const author = authors[0];
+                    console.log(`✅ Loaded author ${author.name} from Supabase`);
+
+                    return {
+                        success: true,
+                        data: author
+                    };
+                } catch (error) {
+                    console.error(`❌ Failed to fetch author ${authorId} from Supabase:`, error);
+                    return {
+                        success: false,
+                        error: { message: error.message }
+                    };
+                }
+            }
+
             async getCategoriesFromSupabase() {
                 try {
                     console.log('🔄 Fetching categories from Supabase...');
@@ -1312,6 +1354,10 @@
                     if (method === 'GET') {
                         if (endpoint === '/authors' || endpoint.includes('/authors?')) {
                             return await this.getAuthorsFromSupabase();
+                        } else if (endpoint.match(/^\/authors\/[a-zA-Z0-9]+$/)) {
+                            // Individual author request like /authors/{id}
+                            const authorId = endpoint.split('/')[2];
+                            return await this.getAuthorFromSupabase(authorId);
                         }
                     }
 
@@ -2770,7 +2816,17 @@
                 setTimeout(() => {
                     if (author) {
                         console.log('📝 Populating author form with data:', author);
+
+                        // Add visual indicator that we're populating
+                        const title = document.getElementById('author-editor-modal-title');
+                        title.textContent = `Edit Author - Loading...`;
+
                         this.populateAuthorForm(author);
+
+                        // Update title after population
+                        setTimeout(() => {
+                            title.textContent = `Edit Author - ${author.name}`;
+                        }, 100);
                     } else {
                         console.log('🆕 Setting up form for new author');
                         form.reset();
